[package]
name = "cgp-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
cgp-core                        = { version = "0.1.0" }
cgp-error-eyre                  = { version = "0.1.0" }
cgp-component-macro             = { version = "0.1.0" }

[patch.crates-io]
cgp-async           = { git = "https://github.com/informalsystems/cgp.git" }
cgp-async-macro     = { git = "https://github.com/informalsystems/cgp.git" }
cgp-component       = { git = "https://github.com/informalsystems/cgp.git" }
cgp-component-macro = { git = "https://github.com/informalsystems/cgp.git" }
cgp-component-macro-lib = { git = "https://github.com/informalsystems/cgp.git" }
cgp-field               = { git = "https://github.com/informalsystems/cgp.git" }
cgp-field-macro         = { git = "https://github.com/informalsystems/cgp.git" }
cgp-field-macro-lib         = { git = "https://github.com/informalsystems/cgp.git" }
cgp-core            = { git = "https://github.com/informalsystems/cgp.git" }
cgp-error           = { git = "https://github.com/informalsystems/cgp.git" }
cgp-error-eyre      = { git = "https://github.com/informalsystems/cgp.git" }
cgp-inner           = { git = "https://github.com/informalsystems/cgp.git" }
cgp-run             = { git = "https://github.com/informalsystems/cgp.git" }
